# KikoPlay

./: .gitignore  CMakeLists.txt  CNAME  KikoPlay.pro  _config.yml  about.md  globalobjects.cpp  index.html  main.cpp  projects.md
Download/: aria2jsonrpc.h  downloadmodel.cpp  downloadmodel.h
LANServer/: httpserver.h
Play/Playlist/: playlist.h
Play/Video/: mpvplayer.cpp  mpvplayer.h
UI/: about.cpp  adduritask.cpp  adduritask.h  checkupdate.cpp  downloadwindow.cpp  downloadwindow.h  framelessdialog.cpp  framelessdialog.h  list.h  mainwindow.cpp  player.cpp  tip.cpp
UI/widgets/: clickslider.h  dirselectwidget.cpp  dirselectwidget.h  fonticontoolbutton.h
_data/: projects.json  social.json  urls.json
_includes/: analytics.html  footer.html  header.html  js.html
_layouts/: posts_by_category.html  project.html
_posts/: 2016-06-04-test-page.md  2019-05-24-kikoplay-0-5-0.md  2019-05-24-kikoplay-0-5-1.md  2019-05-24-kikoplay-0-6-2.md  2019-05-25-2019-1-anime-danmu.md  2019-07-04-2019-10-anime-danmu.md  2019-07-04-2019-4-anime-danmu.md  2019-08-25-kikoplay-0-6-0.md  2020-05-31-kikoplay-0-7-0.md  2021-03-16-kikoplay-0-7-1_2.md  2021-03-18-kikoplay-0-8-0.md
category/: anime.md  danmu.md  newVersion.md
lib/runtime/: 版本历史.txt
lib/runtime/script/: comicat.lua  mikan.lua
lib/runtime/web/: index.html
lib/runtime/web/js/: KikoPlay.js
static/css/: main.css
